[package]
name = "ringer"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64-simd = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
enum_dispatch = "0.3"
futures = "0.3"
http = "0.2"
http-serde = "1"
hyper = { version = "0.14", features = ["client", "http1", "http2", "stream", "runtime"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
itertools = "0.10"
log = "0.4"
once_cell = "1"
percent-encoding = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "2"
serde_yaml = "0.9"
simple_logger = { version = "4", features = ["stderr"] }
tera = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde"] }
uuid-simd = "0.8"
